# shu-ces-archive

./: .gitmodules  README.md
MIDI音乐播放器/: CMakeLists.txt  MIDIPlayer.cpp  MIDIPlayer.h  main.cpp
MIDI音乐播放器/include/: Binasc.h  MidiEvent.h  MidiEventList.h  MidiFile.h  MidiMessage.h  Options.h
MIDI音乐播放器/midi/: FF14 6.0cg 萨雷安段落 好嗨呀 4分钟洗脑循环 Higher, oh, higher.mid  ff14诗人演奏 悠久之风.mid  ギターと孤独と蒼い惑星.mid  最炫民族风-凤凰传奇-.mid
人工智能与脑认知/: 脑认知复习.md
信号处理/: 信号处理项目报告要求.pptx
信号处理/课件/: Summary.pptx
信号处理/课件/ppt/: Lecture0_Syllabus.pptx  Lecture1_Introduction.pptx  Lecture3_Convolution.pptx  Lecture5_Continuous Time Fourier Transform.pptx  Lecture7_Discrete Time Fourier Series.pptx  Lecture8_Discrete Time Fourier Transform.pptx  Summary.pptx
信号处理/课件/信号处理复习/: Lecture1_Introduction.pptx  Lecture2_Complex.pptx  Lecture3_Convolution.pptx  Lecture5-6_Continuous Time Fourier Transform.pptx  Practice1_Signal system and convolution.pptx  Practice2_Fourier Series and Fourier Transform.pptx  Practice3_Discrete Time Fourier and Sampling.pptx  Summary.pptx  信号处理总结.docx
博弈论与强化学习/: 课程设计报告模板.docx
博弈论与强化学习/作业/: 01动态规划-作业.ipynb  01动态规划.ipynb  02Q-learning和SARSA-作业.ipynb  02Q-learning和SARSA.ipynb
操作系统A/实验/: 实验报告模版.docx
数据结构2/lab/zpp-data-structure/: .gitignore  CMakeLists.txt
数据结构2/lab/zpp-data-structure/lab2/: Assistant.h  CMakeLists.txt  Graph.h  UnionFind.h  graphview.cpp  graphview.h  graphview.ui  main.cpp  mainview.cpp  mainview.h  mainview.ui  ui_graphview.h  ui_mainview.h  大中国乡.txt
数据结构2/lab/zpp-data-structure/lab3/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  HashMap.h  console_utils.h  dictionary.txt  main.cpp  string_utils.h
数据结构2/lab/zpp-data-structure/lab4/: CMakeLists.txt  DictReader.cpp  DictReader.h  dictrandom.txt  main.cpp  sorts.cpp  sorts.h
智能系统控制/实验/lab1/: lab1.xlsx  lab1_1.m  lab1_2.m
智能系统控制/实验/lab10/: chap10_1.m  function_plot.m
智能系统控制/实验/lab2/: chap2_1.m  chap2_2.m
智能系统控制/实验/lab3/: chap3_1.m  chap3_2.m  chap3_3.m  chap3_4.m  chap3_5.m  lab3.m  lab3_1.m
智能计算系统/作业/: 作业1-3.docx  作业2.docx
机器学习基础/: 2025机器学习--课程论文模板.docx
矩阵代数/: 基于特征值分解求SVD分解 (1).doc  基于特征值分解求SVD分解.doc
计算机图形学/: 《计算机图形学》课程项目报告（模板）.docx
计算机组成原理与体系结构A/实验/: 计箱实验5-6-7.docx
计算机网络A/作业/: hw1.md  hw2.md  hw3.md  hw4.md
计算机网络A/实验/: VLAN实验预习.pptx
运筹与优化/: week 1 上机.pptx  week 10 上机.pptx  week 2 上机.pptx  week 3 上机.pptx  week 5 上机.pptx  week 6 上机.pptx  week 7 上机.pptx  week 8-9 上机.pptx
面向对象程序设计A/: 单选题01.docx  实验01.docx
面向对象程序设计A/实验02/: 实验02-题目.docx
面向对象程序设计A/实验03/: 实验03-题目.docx
面向对象程序设计A/实验05/: 实验05-课程小项目.docx
面向对象程序设计A/实验08/: 实验08-课程项目4.docx
(+185 files in other folders)
